correção ts particles

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-heart@2/tsparticles.shape.heart.min.js"></script>
   </head>
   <body>
-    <!-- tsparticles container -->
-    <div id="tsparticles"></div>
-
+    <div id="background-container">
+      <!-- tsparticles container -->
+      <div id="tsparticles"></div>
+    </div>
     <!-- Header -->
     <header>
       <nav>
