--- a/casamento.html
+++ b/casamento.html
@@ -17,6 +17,10 @@
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-heart@2/tsparticles.shape.heart.min.js"></script>
 </head>
 <body>
+    <div id="background-container">
+        <!-- tsparticles container -->
+        <div id="tsparticles"></div>
+      </div>
     <!-- Header -->
     <header>
         <nav>
