--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.9.7/dist/barba.umd.js"></script>
 
@@ -33,7 +35,7 @@
     <header>
       <nav>
         <div class="menuLogoWrapper">
-          <img src="./assets/img/emblema.png" alt="Emblema" />
+          <a href="index.html"><img src="./assets/img/emblema.png" /></a>
           <!-- Botão do menu (ícone de hambúrguer) -->
           <button class="menu-toggle" aria-label="Abrir menu">
             <span class="hamburger"></span>
