--- a/rspv.html
+++ b/rspv.html
@@ -30,7 +30,7 @@
   <header>
     <nav>
       <div class="menuLogoWrapper">
-        <img src="./assets/img/emblema.png" alt="Emblema" />
+        <a href="index.html"><img src="./assets/img/emblema.png" /></a>
         <!-- Botão do menu (ícone de hambúrguer) -->
         <button class="menu-toggle" aria-label="Abrir menu">
           <span class="hamburger"></span>
