adicionando formspree definitivo

--- a/noivos.html
+++ b/noivos.html
@@ -75,10 +75,9 @@
                             <p>
                               No início, éramos apenas bons amigos, com interesses em comum. Passávamos muitas madrugadas conversando, jogando, assistindo séries e filmes, sendo verdadeiramente melhores amigos. Quanto mais eu conhecia dele, mais eu queria estar ao seu lado, aproveitando ao máximo o tempo juntos. Eventualmente, percebi que o amava, e, até então, já havia se passado bastante tempo. Eu conhecia muito dele e, hoje em dia, tenho certeza de que o amo com todo o meu coração.</p>
 
-<p>Essa época foi difícil para mim, pois eu não acreditava que ele poderia me amar da mesma forma. Eu guardava esse sentimento para mim mesma até o momento em que precisei desabafar. Pedi um tempo e me afastei... mas não demorou muito para que voltássemos a conversar. Eu só precisava desse tempo para refletir sobre tudo o que havia acontecido e para decidir o que fazer a partir dali. Lembrei de todas as noites em que ríamos, das madrugadas inteiras conversando sobre assuntos absurdos, dos momentos tristes e de raiva... Ele esteve ao meu lado em muitos desses momentos, com seu jeito fofo e carinhoso.</p>
+                            <p>Essa época foi difícil para mim, pois eu não acreditava que ele poderia me amar da mesma forma. Eu guardava esse sentimento para mim mesma até o momento em que precisei desabafar. Pedi um tempo e me afastei... mas não demorou muito para que voltássemos a conversar. Eu só precisava desse tempo para refletir sobre tudo o que havia acontecido e para decidir o que fazer a partir dali. Lembrei de todas as noites em que ríamos, das madrugadas inteiras conversando sobre assuntos absurdos, dos momentos tristes e de raiva... Ele esteve ao meu lado em muitos desses momentos, com seu jeito fofo e carinhoso.</p>
 
-<p>Foi depois de tudo isso que iniciamos nosso namoro de verdade. E assim chegamos ao dia 15 de dezembro, data em que vamos comemorar todo o amor e carinho que sentimos um pelo outro, com o nosso casamento. Espero muito ver você lá para celebrar tudo isso!
-                            </p>
+                            <p>Foi depois de tudo isso que iniciamos nosso namoro de verdade. E assim chegamos ao dia 15 de dezembro, data em que vamos comemorar todo o amor e carinho que sentimos um pelo outro, com o nosso casamento. Espero muito ver você lá para celebrar tudo isso! </p>
                             <small class="author">Sthefanny, noiva</small>
                           </div>
                         </div>
