--- a/rspv.html
+++ b/rspv.html
@@ -55,7 +55,7 @@
         <div class="rspvContainer">
           <h1 class="sectionTitle">Confirme sua presença</h1>
           <div class="rspvWrapper">
-            <form action="https://formspree.io/f/xovaodap" method="POST" class="rsvp-form">
+            <form action="https://formspree.io/f/xyzyglwl" method="POST" class="rsvp-form">
               <label for="name">Nome Completo:</label>
               <input type="text" id="name" name="name" required>
               <label for="email">E-mail:</label>
