inclusao de lista de presentes

--- a/casamento.html
+++ b/casamento.html
@@ -36,6 +36,7 @@
                         <li><a href="noivos.html" data-barba="link">Os Noivos</a></li>
                         <li><a href="casamento.html" data-barba="link">Nosso Dia</a></li>
                         <li><a href="rspv.html" data-barba="link">Confirme sua Presença</a></li>
+                        <li><a href="https://www.querodecasamento.com.br/lista-de-casamento/gabriel-sthefanny" target="_blank">Lista de Presentes</a></li>
                     </ul>
                 </div>
             </div>
