--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               <li><a href="noivos.html">Os Noivos</a></li>
               <li><a href="casamento.html">Nosso Dia</a></li>
               <li><a href="rspv.html">Confirme sua Presença</a></li>
+              <li><a href="https://www.querodecasamento.com.br/lista-de-casamento/gabriel-sthefanny" target="_blank">Lista de Presentes</a></li>
             </ul>
           </div>
         </div>
